// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms / FieldContainer Custom Label Element 1`] = `
<div
  className="rs"
>
  <div
    className="form-field-container "
  >
    <span
      style={
        Object {
          "color": "green",
        }
      }
    >
      Example
      <span
        className="label__optional"
      >
         (facultatif)
      </span>
    </span>
    <div
      className="form-field-container__field"
    >
      <input
        aria-invalid={false}
        className="form-input-field "
        formNoValidate={true}
        id="__mock_generated_id__"
        placeholder="Valeur d'exemple"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms / FieldContainer Disabled 1`] = `
<div
  className="rs"
>
  <div
    className="form-field-container "
  >
    <label
      className="label label--disabled form-field-container__label"
      htmlFor="__mock_generated_id__"
    >
      Example
    </label>
    <div
      className="form-field-container__field"
    >
      <input
        aria-invalid={false}
        className="form-input-field "
        disabled={true}
        formNoValidate={true}
        id="__mock_generated_id__"
        placeholder="Valeur d'exemple"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms / FieldContainer Error 1`] = `
<div
  className="rs"
>
  <div
    className="form-field-container "
  >
    <label
      className="label form-field-container__label"
      htmlFor="__mock_generated_id__"
    >
      Example
    </label>
    <div
      className="form-field-container__field"
    >
      <input
        aria-invalid={true}
        className="form-input-field form-input-field--error "
        formNoValidate={true}
        id="__mock_generated_id__"
        placeholder="Valeur d'exemple"
        type="text"
      />
    </div>
    <p
      className="field-error form-field-container__error"
    >
      Nom inconnu
    </p>
  </div>
</div>
`;

exports[`Storyshots Forms / FieldContainer Error And Help 1`] = `
<div
  className="rs"
>
  <div
    className="form-field-container "
  >
    <label
      className="label form-field-container__label"
      htmlFor="__mock_generated_id__"
    >
      Example
    </label>
    <p
      className="form-field-container__help"
    >
      Un peu d'aide, ça ne fait pas de mal
    </p>
    <div
      className="form-field-container__field"
    >
      <input
        aria-invalid={true}
        className="form-input-field form-input-field--error "
        formNoValidate={true}
        id="__mock_generated_id__"
        placeholder="Valeur d'exemple"
        type="text"
      />
    </div>
    <p
      className="field-error form-field-container__error"
    >
      Nom inconnu
    </p>
  </div>
</div>
`;

exports[`Storyshots Forms / FieldContainer Help 1`] = `
<div
  className="rs"
>
  <div
    className="form-field-container "
  >
    <label
      className="label form-field-container__label"
      htmlFor="__mock_generated_id__"
    >
      Example
    </label>
    <p
      className="form-field-container__help"
    >
      Un peu d'aide, ça ne fait pas de mal
    </p>
    <div
      className="form-field-container__field"
    >
      <input
        aria-invalid={false}
        className="form-input-field "
        formNoValidate={true}
        id="__mock_generated_id__"
        placeholder="Valeur d'exemple"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms / FieldContainer Main 1`] = `
<div
  className="rs"
>
  <div
    className="form-field-container "
  >
    <label
      className="label form-field-container__label"
      htmlFor="__mock_generated_id__"
    >
      Example
    </label>
    <div
      className="form-field-container__field"
    >
      <input
        aria-invalid={false}
        className="form-input-field "
        formNoValidate={true}
        id="__mock_generated_id__"
        placeholder="Valeur d'exemple"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms / FieldContainer Optional 1`] = `
<div
  className="rs"
>
  <div
    className="form-field-container "
  >
    <label
      className="label form-field-container__label"
      htmlFor="__mock_generated_id__"
    >
      Example
      <span
        className="label__optional"
      >
         (facultatif)
      </span>
    </label>
    <div
      className="form-field-container__field"
    >
      <input
        aria-invalid={false}
        className="form-input-field "
        formNoValidate={true}
        id="__mock_generated_id__"
        placeholder="Valeur d'exemple"
        type="text"
      />
    </div>
  </div>
</div>
`;
